--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-image": "2.1.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "3.0.0",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -29,14 +35,70 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
+    "cssnano": "^5.0.17",
+    "esbuild": "^0.14.23",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "lint-staged": "11.2.6",
+    "husky": "7.0.4",
     "jest": "^27.0.5",
+    "prettier": "^2.5.1",
+    "prettier-package-json": "^2.6.3",
+    "rollup": "^2.68.0",
+    "rollup-plugin-esbuild": "^4.8.2",
+    "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-require-context": "^1.0.1",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-visualizer": "^5.5.2",
+    "rollup-plugin-vue": "^5.1.9",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
+  },
+  "peerDependencies": {
+    "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "5.0.6",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sort-media-queries": "^4.2.1"
+  },
+  "lint-staged": {
+    "src/**/*.{js}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "packages/**/*.{js,jsx,vue}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "pageages/**/*.{html,vue,css,less,scss,styl}": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "examples/**/*.{js,jsx,vue}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "examples/**/*.{html,vue,css,less,scss,styl}": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "docs/**/*.{js,jsx,vue}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "package.json": [
+      "prettier-package-json  --write",
+      "git add"
+    ]
   }
 }
