--- a/package.json
+++ b/package.json
@@ -9,55 +9,55 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vuex": "^4.0.0"
+    "core-js": "^3.21.1",
+    "vue": "^3.2.31",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-image": "2.1.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "3.0.0",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@types/jest": "^27.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-typescript": "~5.0.4",
+    "@vue/cli-plugin-unit-jest": "~5.0.4",
+    "@vue/cli-plugin-vuex": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "babel-jest": "^27.0.6",
-    "cssnano": "^5.0.17",
-    "esbuild": "^0.14.23",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "babel-jest": "^27.5.1",
+    "cssnano": "^5.1.7",
+    "esbuild": "^0.14.31",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "lint-staged": "11.2.6",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "husky": "7.0.4",
-    "jest": "^27.0.5",
-    "prettier": "^2.5.1",
+    "jest": "^27.5.1",
+    "lint-staged": "11.2.6",
+    "prettier": "^2.6.2",
     "prettier-package-json": "^2.6.3",
-    "rollup": "^2.68.0",
+    "rollup": "^2.70.1",
     "rollup-plugin-esbuild": "^4.8.2",
-    "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-require-context": "^1.0.1",
     "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-visualizer": "^5.5.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "rollup-plugin-vue": "^5.1.9",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "ts-jest": "^27.0.4",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0",
+    "ts-jest": "^27.1.4",
     "typescript": "~4.5.5"
   },
   "peerDependencies": {
