--- a/package.json
+++ b/package.json
@@ -6,21 +6,52 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "core-js": "^3.21.1",
-    "vue": "^3.2.31",
-    "vue-class-component": "^8.0.0-rc.1",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-image": "2.1.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "3.0.0",
+    "chalk": "^2.4.2",
+    "core-js": "^3.21.1",
+    "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "5.0.6",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sort-media-queries": "^4.2.1",
+    "rollup": "^2.70.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-esbuild": "^4.8.2",
+    "rollup-plugin-filesize": "^9.1.2",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-require-context": "^1.0.1",
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "rollup-plugin-vue": "^5.1.9",
+    "vue": "^3.2.31",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-loader": "^16.8.3",
+    "vuex": "^4.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@storybook/addon-actions": "^6.4.20",
+    "@storybook/addon-essentials": "^6.4.20",
+    "@storybook/addon-links": "^6.4.20",
+    "@storybook/vue3": "^6.4.20",
+    "@types/gulp": "^4.0.9",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
@@ -35,37 +66,26 @@
     "@vue/test-utils": "^2.0.0-rc.17",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
+    "chalk": "^5.0.1",
     "cssnano": "^5.1.7",
     "esbuild": "^0.14.31",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.5.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
+    "rimraf": "3.0.2",
+    "gulp": "^4.0.2",
     "husky": "7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "11.2.6",
     "prettier": "^2.6.2",
     "prettier-package-json": "^2.6.3",
-    "rollup": "^2.70.1",
-    "rollup-plugin-esbuild": "^4.8.2",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-require-context": "^1.0.1",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "rollup-plugin-vue": "^5.1.9",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
     "ts-jest": "^27.1.4",
-    "typescript": "~4.5.5"
-  },
-  "peerDependencies": {
-    "postcss": "^8.4.7",
-    "postcss-import": "^14.0.2",
-    "postcss-nested": "5.0.6",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-sort-media-queries": "^4.2.1"
+    "typescript": "~4.5.5",
+    "vue-template-compiler": "^2.6.14"
   },
   "lint-staged": {
     "src/**/*.{js}": [
